--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,8 @@
     "mongoose": "^7.0.5",
     "nodemon": "^2.0.22"
   },
- 
+  "engines": {
+    "node": "14.x"
+  }
 
 }
